--- a/investor.css
+++ b/investor.css
@@ -64,11 +64,6 @@ html {
     font-family: 'Fira Sans';
     color: gray;
 }
-.content .investment_information_header .main_investment_information .investment_information #invested {
-    font-size: 1vw;
-    font-family: 'Fira Sans';
-    color: white;
-}
 .content .investment_information_header .main_investment_information .investment_information .investment_buttons {
     margin-bottom: 5%;
 }
@@ -160,10 +155,9 @@ html {
     font-size: 1.5vw;
     font-family: 'Fira Sans';
     color: white;
-    text-align: center;
     margin-bottom: 4%;
-    margin-left: 1vw;
-    margin-right: 1vw;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 .content .investment_information_header .extra_investment_information .learn_more_button_section {
     text-align: center;
@@ -204,22 +198,6 @@ html {
 }
 #projects_menu .projects_menu_options .projects_menu_titles {
     font-size: 2vw;
-    font-family: 'Fira Sans';
-}
-#projects_menu .projects_menu_options .projects_menu_values {
-    font-size: 1.5vw;
-    font-family: 'Fira Sans';
-}
-#projects_menu .projects_menu_options .projects_menu_descriptions {
-    font-size: 1vw;
-    font-family: 'Fira Sans';
-}
-#projects_menu .projects_menu_options .projects_menu_benefits_title {
-    font-size: 1vw;
-    font-family: 'Fira Sans';
-}
-#projects_menu .projects_menu_options .projects_menu_benefits {
-    font-size: 1vw;
     font-family: 'Fira Sans';
 }
 @media only screen and (max-device-width: 1024px) {
@@ -265,11 +243,6 @@ html {
         font-size: 4vw;
         font-family: 'Fira Sans';
         color: gray;
-    }
-    .content .investment_information_header .main_investment_information .investment_information #invested {
-        font-size: 3vw;
-        font-family: 'Fira Sans';
-        color: white;
     }
     .content .investment_information_header .main_investment_information .investment_information .investment_buttons {
         margin-bottom: 4%;
@@ -362,10 +335,9 @@ html {
         font-size: 3vw;
         font-family: 'Fira Sans';
         color: white;
-        text-align: center;
         margin-bottom: 4%;
-        margin-left: 1vw;
-        margin-right: 1vw;
+        margin-left: 2%;
+        margin-right: 2%;
     }
     .content .investment_information_header .extra_investment_information .learn_more_button_section {
         text-align: center;
@@ -406,22 +378,6 @@ html {
     }
     #projects_menu .projects_menu_options .projects_menu_titles {
         font-size: 7vw;
-        font-family: 'Fira Sans';
-    }
-    #projects_menu .projects_menu_options .projects_menu_values {
-        font-size: 5vw;
-        font-family: 'Fira Sans';
-    }
-    #projects_menu .projects_menu_options .projects_menu_descriptions {
-        font-size: 4vw;
-        font-family: 'Fira Sans';
-    }
-    #projects_menu .projects_menu_options .projects_menu_benefits_title {
-        font-size: 4vw;
-        font-family: 'Fira Sans';
-    }
-    #projects_menu .projects_menu_options .projects_menu_benefits {
-        font-size: 4vw;
         font-family: 'Fira Sans';
     }
 }
