--- a/consumer.css
+++ b/consumer.css
@@ -92,6 +92,7 @@ body {
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     animation-delay: 0.1s;
+    background: transparent;
 }
 @keyframes scale {
     0% {
@@ -321,6 +322,7 @@ body {
         animation-iteration-count: 1;
         animation-fill-mode: forwards;
         animation-delay: 0.1s;
+        background: transparent;
     }
     @keyframes scale {
         0% {
