--- a/consumer.css
+++ b/consumer.css
@@ -256,6 +256,9 @@ body {
     transform: scale(1.1);
 }
 @media only screen and (max-device-width: 1024px) {
+    html, body {
+        overflow-x: hidden;
+    }
     .content .scrolling_area {
         white-space: nowrap;
         overflow: hidden;
