--- a/home.css
+++ b/home.css
@@ -277,7 +277,7 @@ body {
 }
 @media only screen and (max-device-width: 1024px) {
     .content #background_video {
-        min-height: 100vh;
+        min-height: 100%;
         max-width: 100%;
         object-fit: fill;
         position: sticky;
