--- a/careers.css
+++ b/careers.css
@@ -191,7 +191,7 @@ body {
 }
 @media only screen and (max-device-width: 1024px) {
     .content #background_video {
-        min-height: 100%;
+        min-height: 100vh;
         max-width: 100%;
         object-fit: fill;
         position: sticky;
@@ -253,7 +253,7 @@ body {
         border: none;
         background-color: transparent;
         color: white;
-        font-size: 8vw;
+        font-size: 7vw;
         font-family: 'MuseoModerno';
         transition: 250ms linear;
     }
