Attempt 7: fixing mobile formatting

--- a/careers.css
+++ b/careers.css
@@ -13,7 +13,7 @@ body {
     overflow: visible;
 }
 .content #background_video {
-    min-height: 100vh;
+    min-height: 100%;
     max-width: 100%;
     object-fit: fill;
     position: sticky;
