--- a/careers.css
+++ b/careers.css
@@ -25,6 +25,9 @@ body {
     z-index: -1;
     filter: brightness(50%);
 }
+.content #background_video::-webkit-media-controls-fullscreen-button {
+    display: none;
+}
 .unscrollable {
     width: 100%;
     height: 100%;
@@ -202,6 +205,9 @@ body {
         bottom: 0;
         z-index: -1;
         filter: brightness(50%);
+    }
+    .content #background_video::-webkit-media-controls-fullscreen-button {
+        display: none;
     }
     .unscrollable {
         width: 100%;
