--- a/careers.css
+++ b/careers.css
@@ -13,7 +13,8 @@ body {
     overflow: visible;
 }
 .content #background_video {
-    min-height: 100%;
+    min-height: 100dvh;
+    min-height: 100vh;
     max-width: 100%;
     object-fit: fill;
     position: sticky;
@@ -26,7 +27,8 @@ body {
     filter: brightness(50%);
 }
 .content #background_video_alternative {
-    min-height: 100%;
+    min-height: 100dvh;
+    min-height: 100vh;
     max-width: 100%;
     object-fit: fill;
     position: sticky;
