--- a/home.css
+++ b/home.css
@@ -15,7 +15,8 @@ body {
     overflow: visible;
 }
 .content #background_video {
-    min-height: 100%;
+    min-height: 100dvh;
+    min-height: 100vh;
     max-width: 100%;
     object-fit: fill;
     position: sticky;
@@ -28,7 +29,8 @@ body {
     filter: brightness(50%);
 }
 .content #background_video_alternative {
-    min-height: 100%;
+    min-height: 100dvh;
+    min-height: 100vh;
     max-width: 100%;
     object-fit: fill;
     position: sticky;
