--- a/careers.css
+++ b/careers.css
@@ -222,8 +222,8 @@ body {
     }
     .content #background_video_alternative {
         min-height: 100svh;
+        min-height: 100vh;
         max-width: 100vw;
-        max-width: 100%;
         object-fit: fill;
         position: sticky;
         position: -webkit-sticky;
