--- a/sponsor.css
+++ b/sponsor.css
@@ -129,7 +129,14 @@ html {
     margin-right: 2%;
 
 }
-.content #sponsor_overlay #sponsor_information .sponsor_information_part_1 #sponsor_details_part_1 {
+.content #sponsor_overlay #sponsor_information .sponsor_information_part_1 .sponsor_information_text #sponsor_titles_part_1 {
+    font-size: 1.5vw;
+    margin-right: 20px;
+    font-family: 'EB Garamond';
+    display: inline-block;
+    font-weight: bold;
+}
+.content #sponsor_overlay #sponsor_information .sponsor_information_part_1 .sponsor_information_text #sponsor_details_part_1 {
     font-size: 1.5vw;
     margin-right: 20px;
     font-family: 'EB Garamond';
@@ -148,14 +155,22 @@ html {
     margin-left: 2%;
     margin-right: 2%;
 }
-.content #sponsor_overlay #sponsor_information .sponsor_information_part_2 #sponsor_details_part_2 {
+.content #sponsor_overlay #sponsor_information .sponsor_information_part_2 .sponsor_information_text #sponsor_titles_part_2 {
+    font-size: 1.5vw;
+    margin-left: 10px;
+    margin-right: 20px;
+    font-family: 'EB Garamond';
+    display: inline-block;
+    font-weight: bold;
+}
+.content #sponsor_overlay #sponsor_information .sponsor_information_part_2 .sponsor_information_text #sponsor_details_part_2 {
     font-size: 1.5vw;
     margin-left: 10px;
     margin-right: 20px;
     font-family: 'EB Garamond';
     display: inline-block;
 }
-.content #sponsor_overlay #sponsor_information .sponsor_information_part_2 #free_trial_redirect {
+.content #sponsor_overlay #sponsor_information .sponsor_information_part_2 .sponsor_information_text #free_trial_redirect {
     text-decoration: none;
     font-weight: bold;
     color: black;
@@ -272,7 +287,7 @@ html {
         top: 60%;
         width: 100%;
         background-image: linear-gradient(transparent, white 20%);
-        height: 200vh;
+        height: 250vh;
     }
     .content #sponsor_overlay #sponsor_information {
         margin-top: 20%;
@@ -291,7 +306,14 @@ html {
         display: inline;
         text-align: center;
     }
-    .content #sponsor_overlay #sponsor_information .sponsor_information_part_1 #sponsor_details_part_1 {
+    .content #sponsor_overlay #sponsor_information .sponsor_information_part_1 .sponsor_information_text #sponsor_titles_part_1 {
+        font-size: 4vw;
+        font-family: 'EB Garamond';
+        display: inline-block;
+        text-align: left;
+        font-weight: bold;
+    }
+    .content #sponsor_overlay #sponsor_information .sponsor_information_part_1 .sponsor_information_text #sponsor_details_part_1 {
         margin-bottom: 10%;
         font-size: 4vw;
         font-family: 'EB Garamond';
@@ -307,14 +329,21 @@ html {
         display: inline;
         text-align: center;
     }
-    .content #sponsor_overlay #sponsor_information .sponsor_information_part_2 #sponsor_details_part_2 {
+    .content #sponsor_overlay #sponsor_information .sponsor_information_part_2 .sponsor_information_text #sponsor_titles_part_2 {
         margin-top: 10%;
         font-size: 4vw;
         font-family: 'EB Garamond';
         display: inline-block;
         text-align: left;
+        font-weight: bold;
     }
-    .content #sponsor_overlay #sponsor_information .sponsor_information_part_2 #free_trial_redirect {
+    .content #sponsor_overlay #sponsor_information .sponsor_information_part_2 .sponsor_information_text #sponsor_details_part_2 {
+        font-size: 4vw;
+        font-family: 'EB Garamond';
+        display: inline-block;
+        text-align: left;
+    }
+    .content #sponsor_overlay #sponsor_information .sponsor_information_part_2 .sponsor_information_text #free_trial_redirect {
         text-decoration: none;
         font-weight: bold;
         color: black;
